# OctoPrint-SlicerEstimator

./: API_DOC.md  MANIFEST.in  README.md  Taskfile.yml  deploy_plugin.bat  pyproject.toml  setup.py
octoprint_M117_estimator/: __init__.py
octoprint_M117_estimator/templates/: M117_estimator_settings.jinja2
octoprint_SlicerEstimator/: __init__.py  const.py  estimator.py  metadata.py  util.py
octoprint_SlicerEstimator/static/css/: SlicerEstimator.css
octoprint_SlicerEstimator/static/js/: SlicerEstimator.js  SlicerEstimator_filelist.js
octoprint_SlicerEstimator/templates/: SlicerEstimator_settings.jinja2
octoprint_SlicerEstimator/translations/de/LC_MESSAGES/: messages.mo  messages.po
octoprint_gcodestatEstimator/: __init__.py
octoprint_gcodestatEstimator_Cura/: __init__.py
octoprint_slicerestimator/: __init__.py  estimator.py  metadata.py  util.py
octoprint_slicerestimator/static/js/: SlicerEstimator.js
octoprint_slicerestimator/templates/: SlicerEstimator_settings.jinja2
octoprint_slicerestimator/translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/: messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
